[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mudclient"
version = "0.1.0"
description = "Async terminal MUD client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "prompt_toolkit>=3.0.43",
  "telnetlib3>=2.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
